2011-03-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct inconsistencies in msys-gettext package names.

	* msys/msys-gettext.xml (msys-gettext): Make dependencies independent
	of MSYS version number; (match using "*" wild-card instead of "%").
	(msys-libintl, msys-libgettextpo, msys-libasprintf): Likewise; also
	include MSYS version number (1.0.13) in release specifications, adding
	"download" tags to map modified release names to actual tarball names.

	* msys/issue.log: Update for publication.

2011-03-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update for mingw-get-0.2-alpha-2 release.

	* mingw32/mingw32-mingw-get.xml: Add release entries.
	* mingw32/issue.log: Update accordingly.

2011-03-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update for mingw-get-0.2-alpha-1 release.

	* mingw32/mingw32-mingw-get.xml: Add release entries.
	* mingw32/issue.log: Update accordingly.

2011-03-11  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish w32api.

	* mingw32/mingw32-runtime.xml: Update w32api to 3.17-1.
	* mingw32/issue.log: Updated accordingly.

2011-03-05  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish msys-mintty.

	* msys/msys-mintty.xml: Update to 0.9.6-1.
	* msys/issue.log: Updated accordingly.

2011-03-05  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish w32api.

	* mingw32/mingw32-runtime.xml: Update w32api to 3.16-1.
	* mingw32/issue.log: Updated accordingly.

2011-02-26  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update for mingw-get-0.1-alpha-5.2 bug-fix release.

	* mingw32/mingw32-mingw-get.xml: Add release entries; also add
	retrospective entries for mingw-get-0.1-alpha-5.1, published during
	CVS outage, and not subsequently committed.

	* mingw32/issue.log: Update for current release only.

2011-02-25  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Fix typo/version mismatch in msys-console.
