@@ -42,7 +42,7 @@
   mingw32-libiconv.xml:2010090601
   mingw32-libtool.xml:2010092500
   mingw32-make.xml:2011012200
-  mingw32-mingw-get.xml:2011031500
+  mingw32-mingw-get.xml:2011031600
   mingw32-mingw-utils.xml:2010090600
   mingw32-mpc.xml:2010083100
   mingw32-mpfr.xml:2010083100
